Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.17 - unreleased

	Michael Krieger
	- vcdb, vpopmail: pass mode to open() when creating files.  Fixes
	  bug where lock files were created with 0000 permissions.

	Tom Collins
	- vpalias: don't trash alias name passed to valias_insert().
	  [1491087]
	- vpopmaild: don't show last auth if auth-logging disabled.
	  [1511313]

5.4.16 - released 7-May-06

	Michael Krieger
	- vpalias: Properly handle some empty search results.

	Ken Jones
	- vpalias: wasn't allocating enough memory for alias name in
	  valias_select_names (missing one byte for NULL). [1479842]

	Jianbin Xiao
	- vmysql: reconnect to server if connection was dropped.
	  [1469731]

	Rick Widmer
	- vpgsql: fix queries to allow domains starting with digits.

	John Simpson
	- vpgsql: fix compile errors introduced in 5.4.14.
	- vdominfo: undo change from 5.4.14 that displayed alias domains
	  incorrectly.

	Toshihiko Kyoda
	- vdelivermail: check for over quota when creating temp mail file.

	Tom Collins
	- vpalias: Fix double-free in code ported from 5.5 branch.
	- valias: exit non-zero on error, send all errors to stderr.
	- vchkpw: make sure we have cleartext pass before checking SMTP_AUTH
	  or APOP logins. [1453216]
	- Remove vactivedir code since it's just a client for a non-existent
	  server.

5.4.15 - released 24-Feb-06

	Tom Collins
	- Add 'compile' script to distribution.
	- If warn() isn't available, use fprintf() instead.
	- vmysql.c: add missing valias_select_names, valias_select_names_next,
	  and valias_select_names_end from 5.5 branch.
	- vpalias.c: #include "config.h" before we check if VALIAS defined.

5.4.14 - released 17-Jan-06

	Tom Collins
	- vmysql.c: Increase buffer size in vauth_adduser() and use 
	  correct size when calling snprintf.
	- Backport most of 5.5.1, including code required for vpopmaild.